Tweak post styles; correct spacing, add commas as tag list separator.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -325,15 +325,10 @@ h7 {
     margin-bottom: 25px;
 }
 
-
-p {
-    margin-bottom: 25px;
+.post_caption p {
+    margin-top: 0;
 }
 
-
-p.intro {
-    font-size: 18px;
-}
 .dayscount{
     display: inline-block;
     vertical-align: top;
@@ -369,6 +364,7 @@ p.intro {
 	width: 100%;
 	height: 100%;
 	background: #eee;
+	margin: 0 0 10px 0;
 }
 .box .thumbnail img{
 	max-width: 100%;
@@ -409,6 +405,12 @@ p.intro {
 }
 .box .utils,.box .time{
 	display: none;
+}
+ul.tags li::after {
+    content: ', ';
+}
+ul.tags li:last-child::after {
+    content: '';
 }
 
 footer a {
